--- a/src/app/modules/admin/components/side-menu/side-menu.component.html
+++ b/src/app/modules/admin/components/side-menu/side-menu.component.html
@@ -4,9 +4,9 @@
             <div>{{ currentUser.userId }}</div>
         </div>
         <div class="customer-name">
-            {{ currentUser.schemeTypeSelected.schemeTypeName }}
+            {{ currentUser.userName }}
         </div>        
-        <div
+        <!-- <div
             class="click-info"
             *ngIf="schemeTypes.length > 1"
             matRipple
@@ -15,7 +15,7 @@
         >
             <span>Click here change scheme type</span>
             <i class="las la-angle-right"></i>
-        </div>
+        </div> -->
     </div>
 
     <div class="menu-section">
