--- a/src/app/modules/admin/components/employee-list/employee-list.component.html
+++ b/src/app/modules/admin/components/employee-list/employee-list.component.html
@@ -5,40 +5,44 @@
               Employees
         </ng-container>
         <ng-container icons>
-            <button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
-                <i class="las la-file-excel"></i>
-            </button>
-            <!-- <button mat-icon-button >
-                <i class="las la-file-pdf"></i>
-            </button> -->
-            <button *ngIf="selectedUserType>-1 && enableAddButton" mat-icon-button (click)="addUsers()">
-                <i class="las la-plus"></i>
-            </button>
+            <div fxLayout="row" fxLayoutGap="2rem">
+                <mat-form-field class="width-1">
+                    <mat-label>Select Super Employee</mat-label>
+                    <mat-select [(ngModel)]="selectedSuperEmployee">
+                        <mat-option 
+                        (onSelectionChange)="updateSelectedSuperEmployee($event,'')"
+                        [value]="''">All
+                        </mat-option>
+                        <mat-option 
+                        (onSelectionChange)="updateSelectedSuperEmployee($event,promoter.userId)"
+                        *ngFor="let promoter of  promoters" [value]="promoter.userId">{{
+                            promoter.userId + ' - ' + promoter.firstName + '  ' + promoter.lastName 
+                        }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Select Status</mat-label>
+                    <mat-select [(ngModel)]="selectedStatus">
+                        <mat-option 
+                        (onSelectionChange)="updateStatus($event,status)"
+                        *ngFor="let status of statuses" [value]="status">{{
+                            status
+                        }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
+                    <i class="las la-file-excel"></i>
+                </button>
+                <!-- <button mat-icon-button >
+                    <i class="las la-file-pdf"></i>
+                </button> -->
+                <button *ngIf="selectedSuperEmployee" mat-icon-button (click)="addUsers()">
+                    <i class="las la-plus"></i>
+                </button>
+            </div>
         </ng-container>
         <ng-container body>
             <div fxLayout="column" fxFlex="100">
-                <div fxLayout="row" fxLayoutGap="1rem">
-                    <mat-form-field *ngIf="currentUser.userType===1">
-                        <mat-label>Select User Type</mat-label>
-                        <mat-select [(ngModel)]="selectedUserType">
-                            <mat-option 
-                            (onSelectionChange)="updateUserType($event,userType.id)"
-                            *ngFor="let userType of userTypes" [value]="userType.id">{{
-                                userType.name
-                            }}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <mat-form-field>
-                        <mat-label>Select Status</mat-label>
-                        <mat-select [(ngModel)]="selectedStatus">
-                            <mat-option 
-                            (onSelectionChange)="updateStatus($event,status)"
-                            *ngFor="let status of statuses" [value]="status">{{
-                                status
-                            }}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
                 <app-sgs-table
                     [config]="tableConfig"
                     (_lazyLoad)="lazyLoad($event)"
