--- a/src/app/modules/admin/components/promoters-list/promoters-list.component.html
+++ b/src/app/modules/admin/components/promoters-list/promoters-list.component.html
@@ -2,43 +2,61 @@
 <app-outlet-container>
     <app-master-container>
         <ng-container header>
-               Promoters
+              Promoters
         </ng-container>
         <ng-container icons>
-            <button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
-                <i class="las la-file-excel"></i>
-            </button>
-            <!-- <button mat-icon-button >
-                <i class="las la-file-pdf"></i>
-            </button> -->
-            <button *ngIf="selectedUserType>-1 && enableAddButton" mat-icon-button (click)="addUsers()">
-                <i class="las la-plus"></i>
-            </button>
+            <div fxLayout="row" fxLayoutGap="2rem">
+                <mat-form-field class="width-1">
+                    <mat-label>Select Super Employee</mat-label>
+                    <mat-select [(ngModel)]="selectedSuperEmployee">
+                        <mat-option 
+                        (onSelectionChange)="updateSelectedSuperEmployee($event,'')"
+                        [value]="''">All
+                        </mat-option>
+                        <mat-option 
+                        (onSelectionChange)="updateSelectedSuperEmployee($event,superEmployee.userId)"
+                        *ngFor="let superEmployee of  superEmployees" [value]="superEmployee.userId">{{
+                            superEmployee.userId + ' - ' + superEmployee.firstName + '  ' + superEmployee.lastName 
+                        }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field class="width-1">
+                    <mat-label>Select Employee</mat-label>
+                    <mat-select [(ngModel)]="selectedEmployee">
+                        <mat-option 
+                        (onSelectionChange)="updateSelectedEmployee($event,'')"
+                        [value]="''">All
+                        </mat-option>
+                        <mat-option 
+                        (onSelectionChange)="updateSelectedEmployee($event,employee.userId)"
+                        *ngFor="let employee of  employees" [value]="employee.userId">{{
+                            employee.userId + ' - ' + employee.firstName + '  ' + employee.lastName 
+                        }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Select Status</mat-label>
+                    <mat-select [(ngModel)]="selectedStatus">
+                        <mat-option 
+                        (onSelectionChange)="updateStatus($event,status)"
+                        *ngFor="let status of statuses" [value]="status">{{
+                            status
+                        }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
+                    <i class="las la-file-excel"></i>
+                </button>
+                <!-- <button mat-icon-button >
+                    <i class="las la-file-pdf"></i>
+                </button> -->
+                <button *ngIf="selectedSuperEmployee" mat-icon-button (click)="addUsers()">
+                    <i class="las la-plus"></i>
+                </button>
+            </div>
         </ng-container>
         <ng-container body>
             <div fxLayout="column" fxFlex="100">
-                <div fxLayout="row" fxLayoutGap="1rem">
-                    <mat-form-field *ngIf="currentUser.userType===1">
-                        <mat-label>Select User Type</mat-label>
-                        <mat-select [(ngModel)]="selectedUserType">
-                            <mat-option 
-                            (onSelectionChange)="updateUserType($event,userType.id)"
-                            *ngFor="let userType of userTypes" [value]="userType.id">{{
-                                userType.name
-                            }}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <mat-form-field>
-                        <mat-label>Select Status</mat-label>
-                        <mat-select [(ngModel)]="selectedStatus">
-                            <mat-option 
-                            (onSelectionChange)="updateStatus($event,status)"
-                            *ngFor="let status of statuses" [value]="status">{{
-                                status
-                            }}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
                 <app-sgs-table
                     [config]="tableConfig"
                     (_lazyLoad)="lazyLoad($event)"
@@ -49,6 +67,5 @@
         </ng-container>
     </app-master-container>
 </app-outlet-container>
-
 
 
