--- a/src/app/modules/admin/components/super-employees-list/super-employees-list.component.html
+++ b/src/app/modules/admin/components/super-employees-list/super-employees-list.component.html
@@ -5,40 +5,28 @@
               Super Employees
         </ng-container>
         <ng-container icons>
+            <mat-form-field>
+                <mat-label>Select Status</mat-label>
+                <mat-select [(ngModel)]="selectedStatus">
+                    <mat-option 
+                    (onSelectionChange)="updateStatus($event,status)"
+                    *ngFor="let status of statuses" [value]="status">{{
+                        status
+                    }}</mat-option>
+                </mat-select>
+            </mat-form-field>
             <button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
                 <i class="las la-file-excel"></i>
             </button>
             <!-- <button mat-icon-button >
                 <i class="las la-file-pdf"></i>
             </button> -->
-            <button *ngIf="selectedUserType>-1 && enableAddButton" mat-icon-button (click)="addUsers()">
+            <button  mat-icon-button (click)="addUsers()">
                 <i class="las la-plus"></i>
             </button>
         </ng-container>
         <ng-container body>
             <div fxLayout="column" fxFlex="100">
-                <div fxLayout="row" fxLayoutGap="1rem">
-                    <mat-form-field *ngIf="currentUser.userType===1">
-                        <mat-label>Select User Type</mat-label>
-                        <mat-select [(ngModel)]="selectedUserType">
-                            <mat-option 
-                            (onSelectionChange)="updateUserType($event,userType.id)"
-                            *ngFor="let userType of userTypes" [value]="userType.id">{{
-                                userType.name
-                            }}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <mat-form-field>
-                        <mat-label>Select Status</mat-label>
-                        <mat-select [(ngModel)]="selectedStatus">
-                            <mat-option 
-                            (onSelectionChange)="updateStatus($event,status)"
-                            *ngFor="let status of statuses" [value]="status">{{
-                                status
-                            }}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
                 <app-sgs-table
                     [config]="tableConfig"
                     (_lazyLoad)="lazyLoad($event)"
