--- a/src/app/modules/admin/components/scheme-members-list/components/sgs-scheme-details/sgs-scheme-details.component.html
+++ b/src/app/modules/admin/components/scheme-members-list/components/sgs-scheme-details/sgs-scheme-details.component.html
@@ -1,6 +1,6 @@
 <app-master-container>
     <ng-container header>
-        {{'Rs.'+data.data?.amount_per_month + ' - '+data?.data?.no_of_months+' Months'}}
+        {{data.data?.schemeName}}
     </ng-container>
     <ng-container icons>
         <button mat-icon-button (click)="downloadExcel()">
