--- a/src/app/modules/admin/components/sgs-add-forms/sgs-add-forms.component.html
+++ b/src/app/modules/admin/components/sgs-add-forms/sgs-add-forms.component.html
@@ -1,83 +1,6 @@
-<ng-container *ngIf="data.type==='schemes'">    
-    <form  [formGroup]="addSchemesForm" >
-        <div  fxLayout="column" fxLayoutGap="0.3rem">   
-            <ng-container > 
-                <mat-form-field>
-                    <mat-label>Total Amount</mat-label>
-                    <input type="number" matInput formControlName="total_amount" placeholder="Total Amount" />
-                </mat-form-field>
-                <mat-form-field>
-                    <mat-label>No Of Months</mat-label>
-                    <input type="number" matInput formControlName="no_of_months" placeholder="No Of Months" />
-                </mat-form-field>
-                <mat-form-field>
-                    <mat-label>Amount Per Month</mat-label>
-                    <input type="number" matInput formControlName="amount_per_month" placeholder="Amount Per Month" />
-                </mat-form-field>
-                <div fxLayout="row">
-                    <button
-                        class="mat-raised-button mat-primary"
-                        type="submit"
-                        [disabled]="addSchemesForm.invalid"
-                        mat-button
-                        (click)="submitSchemesForm()"
-                    >
-                    Submit
-                    </button>
-                </div>
-            </ng-container>     
-        </div>
-    </form>
-</ng-container>
-
-<ng-container *ngIf="data.type==='schemeNames'">    
-    <form  [formGroup]="addSchemeNamesForm" >
-        <div  fxLayout="column" fxLayoutGap="0.3rem">   
-            <ng-container > 
-                <mat-form-field>
-                    <mat-label>Scheme Name</mat-label>
-                    <input type="text" matInput formControlName="scheme_name" placeholder="Scheme Name" />
-                </mat-form-field>
-                <div fxLayout="row">
-                    <button
-                        class="mat-raised-button mat-primary"
-                        type="submit"
-                        [disabled]="addSchemeNamesForm.invalid"
-                        mat-button
-                        (click)="submitSchemeNamesForm()"
-                    >
-                    Submit
-                    </button>
-                </div>
-            </ng-container>     
-        </div>
-    </form>
-</ng-container>
 <ng-container *ngIf="data.type==='users'">
     <form  [formGroup]="addUserForm" >
-        <div  fxLayout="column" fxLayoutGap="0.3rem">
-            <div class="disableMe" fxFlex="100"> 
-                <mat-form-field>
-                    <mat-label>Introduced By</mat-label>
-                    <input matInput formControlName="introducedBy" placeholder="Introduced By" />
-                </mat-form-field> 
-            </div>           
-            <mat-form-field  fxFlex="100" *ngIf="data?.data?.currentUserType===2">
-                <mat-label>Scheme Type</mat-label>
-                <mat-select formControlName="scheme_type_id">
-                    <mat-option *ngFor="let schemeType of schemeTypes" [value]="schemeType.id" 
-                    (onSelectionChange)="getSchemesByType($event,schemeType.id)">{{
-                        schemeType.scheme_type_name
-                    }}</mat-option>
-                </mat-select>
-            </mat-form-field>          
-            <mat-form-field  fxFlex="100" *ngIf="data?.data?.currentUserType===2">
-                <mat-label>Select Scheme</mat-label>
-                <mat-select formControlName="scheme_id">
-                    <mat-option *ngFor="let scheme of schemes" [value]="scheme.id">
-                    {{scheme.name}}</mat-option>
-                </mat-select>
-            </mat-form-field>
+        <div  fxLayout="column" fxLayoutGap="0.3rem">  
             <mat-form-field>
                 <mat-label>First Name</mat-label>
                 <input matInput formControlName="firstName" placeholder="First Name" />
@@ -95,7 +18,7 @@
                 <input type="password" matInput formControlName="password" placeholder="Password" />
             </mat-form-field>
             <div fxLayout="row" fxLayoutGap="1rem">
-                <mat-form-field [fxFlex]="data?.data?.currentUserType===2?50:100">
+                <mat-form-field [fxFlex]="data?.data?.userType===0?50:100">
                     <mat-label>Mobile Number</mat-label>
                     <input matInput formControlName="mobilePhone" 
                     placeholder="Mobile Number" 
@@ -104,7 +27,7 @@
                     />
                 </mat-form-field>
                 <button
-                    *ngIf="data?.data?.currentUserType===2"
+                    *ngIf="data?.data?.userType===0"
                     class="mat-raised-button mat-primary"
                     type="button"
                     mat-button
@@ -112,7 +35,7 @@
                     Verify
                 </button>
                 <button
-                    *ngIf="data?.data?.currentUserType===2"
+                    *ngIf="data?.data?.userType===0"
                     class="mat-raised-button mat-primary"
                     type="button"
                     mat-button
@@ -124,7 +47,7 @@
             <mat-error fxFlex="100" *ngIf="addUserForm.controls['mobilePhone']?.errors?.['verifyMobile']">
                 Please verify Mobile Number</mat-error>
             <div fxLayout="row" fxLayoutGap="1rem">
-                <mat-form-field [fxFlex]="data?.data?.currentUserType===2?50:100">
+                <mat-form-field [fxFlex]="data?.data?.userType===0?50:100">
                     <mat-label>Aadhar Number</mat-label>
                     <input matInput formControlName="aadhar"                     
                     maxlength="12"
@@ -132,7 +55,7 @@
                     placeholder="Aadhar Number" />
                 </mat-form-field>
                 <button
-                    *ngIf="data?.data?.currentUserType===2"
+                    *ngIf="data?.data?.userType===0"
                     class="mat-raised-button mat-primary"
                     type="button"
                     mat-button
@@ -140,7 +63,7 @@
                     Verify
                 </button>
                 <button
-                    *ngIf="data?.data?.currentUserType===2"
+                    *ngIf="data?.data?.userType===0"
                     class="mat-raised-button mat-primary"
                     type="button"
                     mat-button
@@ -150,7 +73,7 @@
                 </button>
             </div> 
             <div fxLayout="row" fxLayoutGap="1rem">
-                <mat-form-field [fxFlex]="data?.data?.currentUserType===2?50:100">
+                <mat-form-field [fxFlex]="data?.data?.userType===0?50:100">
                     <mat-label>PAN Number</mat-label>
                     <input matInput formControlName="pan"  class="upperCase"                  
                     maxlength="10"
@@ -158,7 +81,7 @@
                     placeholder="PAN Number" />
                 </mat-form-field>
                 <button
-                    *ngIf="data?.data?.currentUserType===2"
+                    *ngIf="data?.data?.userType===0"
                     class="mat-raised-button mat-primary"
                     type="button"
                     mat-button
@@ -166,7 +89,7 @@
                     Verify
                 </button>
                 <button
-                    *ngIf="data?.data?.currentUserType===2"
+                    *ngIf="data?.data?.userType===0"
                     class="mat-raised-button mat-primary"
                     type="button"
                     mat-button
@@ -205,5 +128,22 @@
    
         </div>
     </form>
+</ng-container>
+<ng-container *ngIf="data.type==='schemeMemberErrors'">
+    <div  fxLayout="column" fxLayoutGap="0.5rem" fxFlex="100">              
+        <app-sgs-table
+        [config]="tableConfig"
+        (_lazyLoad)="lazyLoad($event)"
+    ></app-sgs-table>
+        <!-- <button
+            fxFlex="30"
+            class="mat-raised-button mat-primary"
+            type="button" 
+            mat-button
+            (click)="skipAndProceed()"
+        >
+            Skip them and Proceed
+        </button> -->
+    </div>
 </ng-container>
 
