settings number format changed

--- a/src/app/modules/admin/components/sgs-edit-forms/sgs-edit-forms.component.html
+++ b/src/app/modules/admin/components/sgs-edit-forms/sgs-edit-forms.component.html
@@ -46,28 +46,28 @@
             <h3>Individual Scheme Commissions</h3>
             <mat-form-field>
                 <mat-label>Super Employee %</mat-label>
-                <input matInput appOnlyNumbers formControlName="individual_super_employee" placeholder="Super Employee %" />
+                <input matInput  formControlName="individual_super_employee" placeholder="Super Employee %" />
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Employee %</mat-label>
-                <input matInput appOnlyNumbers formControlName="individual_employee" placeholder="Employee %" />
+                <input matInput  formControlName="individual_employee" placeholder="Employee %" />
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Promoter %</mat-label>
-                <input matInput appOnlyNumbers formControlName="individual_promoter" placeholder="Promoter %" />
+                <input matInput  formControlName="individual_promoter" placeholder="Promoter %" />
             </mat-form-field>
             <h3>Group Scheme Commissions</h3>
             <mat-form-field>
                 <mat-label>Super Employee %</mat-label>
-                <input matInput appOnlyNumbers formControlName="group_super_employee" placeholder="Super Employee %" />
+                <input matInput  formControlName="group_super_employee" placeholder="Super Employee %" />
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Employee %</mat-label>
-                <input matInput appOnlyNumbers formControlName="group_employee" placeholder="Employee %" />
+                <input matInput  formControlName="group_employee" placeholder="Employee %" />
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Promoter %</mat-label>
-                <input matInput appOnlyNumbers formControlName="group_promoter" placeholder="Promoter %" />
+                <input matInput  formControlName="group_promoter" placeholder="Promoter %" />
             </mat-form-field>
             <!-- <div>
                 <ckeditor [editor]="Editor" [data]="editorData"></ckeditor>
