--- a/src/app/modules/public-access/components/public-access-home/public-access-home.component.html
+++ b/src/app/modules/public-access/components/public-access-home/public-access-home.component.html
@@ -1,8 +1,8 @@
-<div class="column banner">     
-        <div class="column content">
-            <div class="row justtify-content-space-between h-33">
-                <div class="hero-style2 pt-8 px-3">
-                    <div class="column gap-2">
+<div class="banner" fxLayout="column" fxFlex="100">     
+        <div class="content" fxLayout="column" fxFlex="100">
+            <div class="h-33" fxLayout="row">
+                <div class="hero-style2 pt-8 px-3" fxFlex="50">
+                    <div class="gap-2" fxLayout="column" fxFlex="100">
                         <span class="hero-subtitle">
                         Authorized outright dealer for Viindhya Bullion Pvt Ltd
                         Welcome to SAVEGOLD
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div fxFlex="50">
                     <img src="assets/images/slider-banner.jpg" />
                 </div>
             </div>
