--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,10 +73,10 @@ mx-1{
     display: flex;
     flex-direction: row;  
 }
-.column{
-    display: flex;
-    flex-direction: column;  
-}
+// .column{
+//     display: flex;
+//     flex-direction: column;  
+// }
 .justify-content-space-around{
     justify-content: space-around !important;
 }
