--- a/src/app/modules/admin/components/scheme-members-list/components/group/group.component.html
+++ b/src/app/modules/admin/components/scheme-members-list/components/group/group.component.html
@@ -16,6 +16,9 @@
                         }}</mat-option>
                     </mat-select>
                 </mat-form-field>
+                <button *ngIf="selectedScheme" mat-icon-button (click)="addUsers()">
+                    <i class="las la-plus"></i>
+                </button>
             </div>
         </ng-container>
         <ng-container body>
@@ -28,7 +31,7 @@
                             (onSelectionChange)="getSchemeMembers($event,scheme)"
                             *ngFor="let scheme of schemes" [value]="scheme" 
                             >{{
-                                scheme.scheme_name + ' - '+scheme.scheme_start_date + ' - '+scheme.name
+                                scheme.scheme_name + ' - '+scheme.scheme_date + ' - '+scheme.name
                             }}</mat-option>
                         </mat-select>
                     </mat-form-field>
