--- a/src/app/modules/admin/components/schemes/components/group/group.component.html
+++ b/src/app/modules/admin/components/schemes/components/group/group.component.html
@@ -2,9 +2,9 @@
     <app-master-container>
         <ng-container header>Group Schemes</ng-container>
         <ng-container icons>
-            <button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
+            <!-- <button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
                 <i class="las la-file-excel"></i>
-            </button>
+            </button> -->
             <button mat-icon-button  (click)="addScheme()">
                 <i class="las la-plus"></i>
             </button>
