--- a/src/app/modules/authentication/components/login/login.component.html
+++ b/src/app/modules/authentication/components/login/login.component.html
@@ -13,7 +13,7 @@
             >
                 <mat-form-field class="md-block">
                     <mat-label>User Id</mat-label>
-                    <input formControlName="email" required matInput type="text" name="email" />
+                    <input formControlName="userId" required matInput type="text" name="userId" />
                     <i matSuffix class="las la-user-tie"></i>
                 </mat-form-field>
                 <mat-form-field class="md-block">
