--- a/src/app/modules/admin/components/scheme-members-list/components/individual/individual.component.html
+++ b/src/app/modules/admin/components/scheme-members-list/components/individual/individual.component.html
@@ -16,13 +16,13 @@
                         }}</mat-option>
                     </mat-select>
                 </mat-form-field>
-                <button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
+                <!--<button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
                     <i class="las la-file-excel"></i>
                 </button>
-                <!-- <button mat-icon-button >
+                 <button mat-icon-button >
                     <i class="las la-file-pdf"></i>
                 </button> -->
-                <button *ngIf="selectedPromoter" mat-icon-button (click)="addUsers()">
+                <button *ngIf="selectedScheme" mat-icon-button (click)="addUsers()">
                     <i class="las la-plus"></i>
                 </button>
             </div>
