scheme member completed

--- a/src/app/modules/admin/components/header/header.component.html
+++ b/src/app/modules/admin/components/header/header.component.html
@@ -21,10 +21,10 @@
             </div>
             <div *ngIf="user.email" class="profile-header-option">
                 <i class="las la-envelope"></i>
-                <div>{{ user.email }}</div>
+                <div>{{ user.user_email }}</div>
             </div>
             <div *ngIf="user.aadhar" class="profile-header-option">
-                <i class="las la-envelope"></i>
+                <i class="las la-credit-card"></i>
                 <div>{{ user.aadhar }}</div>
             </div>
             <div *ngIf="user.pan" class="profile-header-option">
