--- a/src/app/modules/scheme-member/scheme-member.component.html
+++ b/src/app/modules/scheme-member/scheme-member.component.html
@@ -1,1 +1,15 @@
-<p>scheme-member works!</p>
+ 
+  <div fxLayout="row">
+    <div fxFlex="20" *ngIf="showSideMenu" class="side-menu">
+      <app-side-menu></app-side-menu>
+    </div>
+    <div [fxFlex]="showSideMenu?'80':'100'">
+      <div fxLayout="column" fxFlex="100" >
+          <app-header (logoutAction)="logout()" (menuAction)="handleMenu($event)"></app-header>
+          <app-outlet-container>
+            <router-outlet></router-outlet>
+          </app-outlet-container>
+          
+      </div>
+    </div>
+  </div>
