--- a/src/app/modules/online-exams/online-exams.component.scss
+++ b/src/app/modules/online-exams/online-exams.component.scss
@@ -16,3 +16,16 @@
 .size{
     font-size: 0.87rem;
 }
+.side-menu
+{
+    width: 75%;
+    height: 100%;
+    background-color: #fff;
+    top: 0rem !important;
+    position: absolute;
+    padding: 0.5rem;
+}
+.mosue-pointer
+{
+    cursor: pointer;
+}
