carousel slides added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,8 @@ $sweety1-theme: mat.define-light-theme(
 /* You can add global styles to this file, and also import other style files */
 
 @import 'base';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 * {
     font-family: 'Roboto', sans-serif;
     margin: 0;
