--- a/src/app/modules/public-access/components/public-access-home/public-access-home.component.html
+++ b/src/app/modules/public-access/components/public-access-home/public-access-home.component.html
@@ -1,30 +1,10 @@
-<div class="banner" fxLayout="column" fxFlex="100">     
-        <div class="content" fxLayout="column" fxFlex="100">
-            <div class="h-33" fxLayout="row">
-                <div class="hero-style2 pt-8 px-3" fxFlex="50">
-                    <div class="gap-2" fxLayout="column" fxFlex="100">
-                        <span class="hero-subtitle">
-                        Authorized outright dealer for Viindhya Bullion Pvt Ltd
-                        Welcome to SAVEGOLD
-                        Best Online Jewellery Shop
-                        </span>
-                        <h1 class="hero-title text-theme">
-                            India’s leading
-                        </h1>
-                        <h1 class="hero-title">  gold refinery</h1>
-                        <div class="checklist">
-                            <ul>
-                                <li><i class="las la-check"></i>Refining Services</li>
-                                <li><i class="las la-check"></i>Refining Process</li>
-                                <li><i class="las la-check"></i>Accredited Laboratory</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div fxFlex="50">
-                    <img src="assets/images/slider-banner.jpg" />
-                </div>
-            </div>
-        </div>
+<div  fxLayout="column" fxFlex="100">
+    <owl-carousel-o [options]="customOptions">  
+      <ng-container *ngFor="let slide of slidesStore">
+        <ng-template carouselSlide [id]="slide.id">
+          <img [src]="slide.img">
+        </ng-template>
+      </ng-container>  
+    </owl-carousel-o>  
 </div>
 
