--- a/src/app/modules/public-access/components/public-access-home/public-access-home.component.scss
+++ b/src/app/modules/public-access/components/public-access-home/public-access-home.component.scss
@@ -103,3 +103,12 @@
         }
     }
 }
+::ng-deep{
+    .owl-stage{
+        height: 30rem;
+        overflow: hidden;
+        img{
+            object-fit: fill;
+        }
+    }
+}
